Centralisez votre logique avec les Services

--- a/src/app/face-snap-list/face-snap-list.component.html
+++ b/src/app/face-snap-list/face-snap-list.component.html
@@ -1,1 +1,2 @@
 <app-face-snap *ngFor="let faceSnap of faceSnapsv" [faceSnap]="faceSnap"></app-face-snap>
+<app-food-snap *ngFor="let facefood of food" [foodSnap]="facefood"></app-food-snap>
